# backend/swagger.json
@@ -22,7 +22,7 @@
         }
       }
     },
-    "/api/auth/register": {
+    "/api/auth/staff/register": {
       "post": {
         "description": "",
         "parameters": [
@@ -682,6 +682,29 @@
           "200": {
             "description": "OK"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/jobs/download-excel": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
           "401": {
             "description": "Unauthorized"
           },
